feat: update controllers and their docs with dto
